teams/team-dsp/stage/templates/activate2-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-activate2-fe
  labels:
    helm.sh/chart: activate2-fe-0.1.0
    app.kubernetes.io/name: activate2-fe
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: activate2-fe
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: activate2-fe
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 65534
      containers:
        - name: activate2-fe
          securityContext:
            {}
          image: "945109781822.dkr.ecr.us-east-1.amazonaws.com/activate2-fe:master_f0d1063"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
