teams/team-dsp/stage/templates/activate2-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-activate2-fe
  labels:
    helm.sh/chart: activate2-fe-0.1.0
    app.kubernetes.io/name: activate2-fe
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  ingressClassName: ingress-nginx-external
  rules:
    - host: "activate2-fe.staging.axonixtest.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-activate2-fe
                port:
                  number: 80
